Move panel to bottom and fix drag on mobile.

--- a/style.css
+++ b/style.css
@@ -176,7 +176,6 @@ button:disabled {
 	position: absolute;
 	background: #909090;
 	cursor: pointer;
-	bottom: 0px;
 }
 
 .hidden {
